# sprint

./: .cursorignore  AGENTS.md  DESIGN.md  README.md  futureplan.md  lumi_6_ai_native_skill_lab_prd_and_taxonomy (1).md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/app/: db.py  main.py  schemas.py
backend/app/ai/: __init__.py  archetypes.py  llm.py  prompts.py
backend/app/ai/prompts/: README.md  __init__.py  analytical.py  conversational.py  evaluation.py  reflective.py  shared.py
backend/app/routers/: challenges.py  dev.py  health.py  simulations.py  skills.py  sprint_content.py  sprint_evaluation.py  sprint_simulation.py  sprints.py  telemetry.py  users.py
backend/app/services/: __init__.py  learner_context.py  simulation_session_store.py
docs/: ARCHITECTURE.md
scripts/: run-migrations.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/data/: README.md  skills-taxonomy.ts
src/domain/: README.md
src/hooks/: useArchetypeFlow.ts  useSprintContext.ts
src/lib/: api.ts  slug.ts  telemetry.ts
src/stores/: useEvaluationStore.ts  useProgressStore.ts  useReasoningStore.ts  useReflectionStore.ts  useSimulationStore.ts  useSprintStore.ts  useTelemetryStore.ts
src/types/: challenge.ts  index.ts  telemetry.ts
supabase/migrations/: 001_organizations_users.sql  002_user_profiles.sql  003_skills_ontology.sql  004_sprints.sql  005_simulations.sql  006_telemetry.sql  007_memory.sql  008_reports.sql  009_uploads.sql  010_rls_policies.sql  011_seed_skills.sql  011_skill_dna_and_challenges.sql  012_sync_skill_archetype_dna.sql
(+47 files in other folders)
