[project]
name = "lumi6-api"
version = "0.1.0"
description = "Lumi6 Skill Lab — FastAPI Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openai>=1.40.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
